--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -5368,7 +5368,7 @@ textarea.form-control-lg {
   background-color: #141619;
   border-color: #141619;
 }
-
+/**/
 .btn-close {
   box-sizing: content-box;
   width: 1em;
