--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+img {
+  width: 100%; /* or max-width: 100%; */
+  height: auto;
+}
 .top-header {
 	background-color: white;
 	position: sticky;
@@ -79,15 +83,17 @@ body {
 	margin-bottom: 60px;
 	font-size: 30px;
 }
+#about-me p {
+	width: 80%;
+	font-size: 14px;
+}
 .about-me__introduction {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
+	margin-bottom: 0.5rem;
+	line-height: 1.2;
 	width: 60%;
-}
-#about-me p {
-	width: 80%;
-	font-size: 14px;
 }
 
 #gallery {
@@ -101,7 +107,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -144,9 +150,12 @@ body {
 	padding-block: 3em;
 }
 .quote__text {
+	color: rgb(33, 37, 41);
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
+	font-size: 40px;
+	line-height: 48px;
 
 }
 .quote__author {
